<resources>
    <string name="app_name">GroceryAppProjectCharles</string>
    <string name="register_text">Register</string>
    <string name="name_hint">Enter Name</string>
    <string name="email_hint">Enter Email</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="password_hint">Enter Password</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="slash">/</string>
    <string name="my_app_name">Quick Shop</string>
    <string name="profile_text">Profile</string>
    <string name="order_history_text">Order History</string>
    <string name="wallet_text">Wallet</string>
    <string name="terms_text"><![CDATA[Terms & Conditions]]></string>
    <string name="help_text">Help</string>
    <string name="logout_text">Logout</string>
    <string name="search_text">Search</string>
    <string name="main_app_text_logo">QuickShop</string>
    <string name="my_cart_text">My Cart</string>
    <string name="deals_text">Deals of the Week!</string>
    <string name="no_items_text">"No items Available "</string>
    <string name="add_to_cart_text">Add</string>
    <string name="starting_item_count">0</string>
    <string name="delete_text">Delete?</string>
    <string name="home">Home</string>
    <string name="delete_cart">Clear Cart?</string>
    <string name="checkout_text">Proceed to Checkout</string>
    <string name="payment_info">Payment Info</string>
    <string name="address_info">Address Info</string>
    <string name="order_summary">Order Summary</string>
    <string name="confirm_order">Place Order</string>
    <string name="add_payment">+ Add Payment</string>
    <string name="add_address">+ Add Address</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="exp_date">Exp. Date</string>
    <string name="nickname">Nickname</string>
    <string name="order_confirmed">Order Confirmed!</string>
    <string name="thanks">Thank you for placing an order with QuickShop</string>
    <string name="house_number">House Number</string>
    <string name="address_type">Type (i.e apartment, house, etc.)</string>
</resources>