<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/login_text"
        android:textOff="@string/login_text"
        android:textAllCaps="false"
        android:background="@color/transparent"
        android:textColor="@color/reg_button_not_pressed"
        app:layout_constraintEnd_toStartOf="@id/btnRegister"
        app:layout_constraintBottom_toTopOf="@+id/flLogin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toTopOf="@id/btnLogin"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogin"/>

    <androidx.appcompat.widget.AppCompatToggleButton
        android:layout_width="wrap_content"
        android:id="@+id/btnRegister"
        android:layout_height="wrap_content"
        android:textOn="@string/register_text"
        android:textOff="@string/register_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:background="@color/transparent"
        android:textColor="@color/reg_button_not_pressed"
        app:layout_constraintBottom_toTopOf="@+id/flLogin"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/flLogin"/>



</androidx.constraintlayout.widget.ConstraintLayout>