<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawerLayout"
    android:layout_height="match_parent"
    tools:context=".view.CheckoutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/reg_button_not_pressed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/txtPaymentInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_info"
            android:layout_margin="@dimen/_10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnPaymentInfo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_margin="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/search_bar_background"
            app:layout_constraintTop_toBottomOf="@+id/txtPaymentInfo" />

        <TextView
            android:id="@+id/txtAddPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="@dimen/_10dp"
            android:text="@string/add_payment"
            android:textColor="@color/cart_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnPaymentInfo" />

        <TextView
            android:id="@+id/txtAddAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/add_address"
            android:layout_margin="@dimen/_10dp"
            android:textColor="@color/cart_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnAddressInfo" />

        <TextView
            android:id="@+id/txtAddressInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:text="@string/address_info"
            android:textColor="@color/black"
            android:layout_margin="@dimen/_10dp"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAddPayment" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnAddressInfo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_margin="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/search_bar_background"
            app:layout_constraintTop_toBottomOf="@+id/txtAddressInfo" />

        <TextView
            android:id="@+id/txtOrderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:text="@string/order_summary"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAddAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:id="@+id/txtTotalPrice"
            android:layout_margin="@dimen/_10dp"
            android:textColor="@color/reg_button_not_pressed"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOrderSummary" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPlaceOrder"
            android:background="@drawable/create_account_button_background"
            android:paddingStart="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp"
            android:text="@string/confirm_order"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtOrderSummary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_features" />


</androidx.drawerlayout.widget.DrawerLayout>