<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GroceryDashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.17" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/reg_button_not_pressed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/imgCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cart_smaller"
                android:layout_gravity="end"
                android:clickable="true"
                android:layout_marginEnd="@dimen/_20dp"/>

            <TextView
                android:id="@+id/txtToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtSearch"
            android:layout_width="@dimen/_350dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:background="@drawable/search_bar_background"
            android:hint="@string/search_text"
            android:padding="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/reg_button_not_pressed"
            android:padding="@dimen/_10dp"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@id/edtSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edtSearch"
            app:layout_constraintTop_toTopOf="@id/edtSearch" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_320dp"
            android:layout_margin="@dimen/_10dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/txtDeals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/create_account_button_background"
            android:text="@string/deals_text"
            app:layout_constraintTop_toBottomOf="@id/rvCategories"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_30sp"
            android:fontFamily="casual"/>

        <HorizontalScrollView
            android:id="@+id/svDeals"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150dp"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvCategories">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_80dp"
                        android:layout_height="@dimen/_80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bogo" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_80dp"
                        android:layout_height="@dimen/_80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/weekly_deals" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_80dp"
                        android:layout_height="@dimen/_80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/red_apple" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_80dp"
                        android:layout_height="@dimen/_80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/burger" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_80dp"
                        android:layout_height="@dimen/_80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/kebab" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_80dp"
                        android:layout_height="@dimen/_80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ice_cream" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_80dp"
                        android:layout_height="@dimen/_80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/soda" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    app:cardCornerRadius="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_80dp"
                        android:layout_height="@dimen/_80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/christmas" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </HorizontalScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:elevation="@dimen/_40dp"
            android:indeterminateTint="@color/load_bar_color"
            android:max="3"
            android:progress="100"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_features" />


</androidx.drawerlayout.widget.DrawerLayout>